all-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: LoadBalancer  # Changé de ClusterIP à LoadBalancer
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  type: LoadBalancer  # Changé de ClusterIP à LoadBalancer
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  type: ClusterIP  # Reste en ClusterIP
  selector:
    app: car-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: ClusterIP  # Reste en ClusterIP
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP  # Reste en ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP  # Reste en ClusterIP
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
