ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com  # Remplacez par votre domaine
    http:
      paths:
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /car
        pathType: Prefix
        backend:
          service:
            name: car-service
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
