virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: car-rental-vs
spec:
  hosts:
  - "*"
  gateways:
  - car-rental-gateway
  http:
  - match:
    - uri:
        prefix: /booking
    route:
    - destination:
        host: booking-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /car
    route:
    - destination:
        host: car-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /user
    route:
    - destination:
        host: user-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /payment
    route:
    - destination:
        host: payment-service.default.svc.cluster.local
        port:
          number: 80
